// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActionLink /> should render an action link 1`] = `
<ActionLink
  href="/lol"
>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-bdVaJa",
          "isStatic": true,
          "lastClassName": "jaxnrg",
          "rules": Array [
            "
  font-weight: 600;
  font-size: .9375rem;
  text-transform: uppercase;
  transition: color .25s ease-out;

  &,
  &:link,
  &:visited {
    color: ",
            "#432DF3",
            ";
  }

  &:hover {
    color: ",
            "#2512B3",
            "
  }

  &:active {
    color: ",
            "#0F0080",
            "
  }
",
          ],
        },
        "displayName": "ActionLink",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-bdVaJa",
        "target": [Function],
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
        Symbol(Symbol.hasInstance): [Function],
      }
    }
    forwardedRef={null}
    href="/lol"
  >
    <Anchor
      className="jaxnrg"
      href="/lol"
    >
      <a
        className="jaxnrg"
        href="/lol"
      >
        Grrr I am action man
      </a>
    </Anchor>
  </StyledComponent>
</ActionLink>
`;

exports[`<ActionLink /> should render an action link with a replacement anchor tag 1`] = `
<DefaultsProvider
  value={
    Object {
      "AnchorComponent": [Function],
    }
  }
>
  <ActionLink
    href="#"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": true,
            "lastClassName": "jaxnrg",
            "rules": Array [
              "
  font-weight: 600;
  font-size: .9375rem;
  text-transform: uppercase;
  transition: color .25s ease-out;

  &,
  &:link,
  &:visited {
    color: ",
              "#432DF3",
              ";
  }

  &:hover {
    color: ",
              "#2512B3",
              "
  }

  &:active {
    color: ",
              "#0F0080",
              "
  }
",
            ],
          },
          "displayName": "ActionLink",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        }
      }
      forwardedRef={null}
      href="#"
    >
      <Anchor
        className="jaxnrg"
        href="#"
      >
        <AnchorComponent
          className="jaxnrg"
          href="#"
        >
          <a
            href="/allTheFeelsUgh"
          >
            Replacement default text
          </a>
        </AnchorComponent>
      </Anchor>
    </StyledComponent>
  </ActionLink>
</DefaultsProvider>
`;
